@startuml class-diagram
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam class {
  BackgroundColor White
  BorderColor #444
  ArrowColor #444
}
skinparam stereotype {
  CBackgroundColor #E8F4FD
  CBorderColor #2980B9
}

' ══════════════════════════════════════════
'  BUSINESS OBJECTS
' ══════════════════════════════════════════
package "ch.hevs.businessobject" #FAFAFA {

  class User {
    - id : long
    - lastname : String
    - firstname : String
    - balance : BigDecimal
    --
    + getId() : long
    + getLastname() : String
    + setLastname(String) : void
    + getFirstname() : String
    + setFirstname(String) : void
    + getBalance() : BigDecimal
    + setBalance(BigDecimal) : void
  }

  abstract class Media {
    - id : Long
    - title : String
    - director : String
    - price : BigDecimal
    - category : Category
    --
    + {abstract} getRentalDurationInDays() : int
    + getId() : Long
    + getTitle() : String
    + getDirector() : String
    + getPrice() : BigDecimal
    + getCategory() : Category
  }

  class Movie {
    - duration : int
    --
    + getRentalDurationInDays() : int
    + getDuration() : int
  }
  note right of Movie : rentalDuration = 1 day

  class Serie {
    - seasons : int
    - episodes : int
    --
    + getRentalDurationInDays() : int
    + getSeasons() : int
    + getEpisodes() : int
  }
  note right of Serie : rentalDuration = 30 days

  class Category {
    - id : Long
    - name : String
    --
    + getId() : Long
    + getName() : String
    + setName(String) : void
  }

  class Rental {
    - id : Long
    - rentalStart : LocalDateTime
    - rentalEnd : LocalDateTime
    - appliedPrice : BigDecimal
    --
    + isExpired() : boolean
    + getAppliedPrice() : BigDecimal
    + getRentalStart() : LocalDateTime
    + getRentalEnd() : LocalDateTime
    + getUser() : User
    + getMedia() : Media
  }

  Media <|-- Movie
  Media <|-- Serie
  Media "0..*" --> "0..1" Category : category
  Rental "0..*" --> "1" User    : user\ncascade PERSIST, MERGE
  Rental "0..*" --> "1" Media   : media
}

' ══════════════════════════════════════════
'  EXCEPTION
' ══════════════════════════════════════════
package "ch.hevs.exception" #FAFAFA {

  class RentalException {
    - reason : Reason
    --
    + getReason() : Reason
    + getMessage() : String
  }

  enum Reason {
    USER_NOT_FOUND
    MEDIA_NOT_FOUND
    ALREADY_RENTED
    INSUFFICIENT_FUNDS
  }

  RentalException +-- Reason
}

' ══════════════════════════════════════════
'  SERVICE LAYER
' ══════════════════════════════════════════
package "ch.hevs.service" #FAFAFA {

  class MediaService <<@ApplicationScoped>> {
    - em : EntityManager
    --
    + getAllMedia() : List<Media>
    + {method} <b>@Transactional</b> saveMedia(Media) : void
    + getAllCategories() : List<Category>
    + getCategoryById(Long) : Category
  }

  class RentalService <<@RequestScoped>> {
    - em : EntityManager
    --
    + {method} <b>@Transactional</b> rentMedia(Long, Long) : void
    + getActiveRentals(Long) : List<Rental>
  }

  class UserService <<@RequestScoped>> {
    - em : EntityManager
    --
    + getUserByPrincipal(Principal) : User
    + getUserByLastname(String) : User
  }

  RentalService ..> RentalException : <<throws>>
}

' ══════════════════════════════════════════
'  PRESENTATION LAYER
' ══════════════════════════════════════════
package "ch.hevs.presentation" #FAFAFA {

  class AdminBean <<@SessionScoped>> {
    - mediaType : String
    - title : String
    - director : String
    - price : BigDecimal
    - categoryId : Long
    - duration : int
    - seasons : int
    - episodes : int
    - addResult : String
    --
    + addMedia() : String
    + getCategories() : List<Category>
    - resetForm() : void
  }

  class RentalBean <<@SessionScoped>> {
    - selectedMediaId : Long
    - transactionResult : String
    - request : HttpServletRequest
    --
    + getLoggedInUser() : User
    + performRental() : String
    + getMyActiveRentals() : List<Rental>
    + getMedias() : List<Media>
  }

  class MediaBean <<@SessionScoped>> {
    --
    + getMedias() : List<Media>
  }

  AdminBean  --> MediaService  : @Inject
  RentalBean --> RentalService : @Inject
  RentalBean --> MediaService  : @Inject
  RentalBean --> UserService   : @Inject
  MediaBean  --> MediaService  : @Inject
}

@enduml
